@@ -8,6 +8,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ## [Unreleased]
 ### Added
 - [API_PARSER] [CNAPP_WIZ] New collector
+### Fixed
+- [SCRIPTS] [REFRESH_NIC] Correctly parse complex rc.conf ifconfig entries
 
 
 ## [2.33.1] - 2025-10-29
